Updated javascript; now using footnotes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
-dominate==2.1.16
 Flask==0.10.1
 Flask-FlatPages==0.6
-Flask-Script==2.0.5
-Frozen-Flask==0.12
-guess-language-spirit==0.5.2
 itsdangerous==0.24
 Jinja2==2.8
 Markdown==2.6.5
 MarkupSafe==0.23
-namedentities==1.5.2
-Pygments==2.0.2
+oauthlib==0.6.0
 PyYAML==3.11
-visitor==0.1.2
+requests==2.0.0
+requests-oauthlib==0.3.2
+twython==3.1.0
+vboxapi==1.0
 Werkzeug==0.11.3
+wheel==0.26.0
