--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 dominate==2.1.16
 Flask==0.10.1
+Flask-Assets==0.11
 Flask-FlatPages==0.6
 Flask-Script==2.0.5
 Frozen-Flask==0.12
 guess-language-spirit==0.5.2
 itsdangerous==0.24
 Jinja2==2.8
+jsmin==2.2.0
 Markdown==2.6.5
 MarkupSafe==0.23
 namedentities==1.5.2
@@ -13,4 +15,5 @@ nose==1.3.7
 Pygments==2.0.2
 PyYAML==3.11
 visitor==0.1.2
+webassets==0.11.1
 Werkzeug==0.11.3
