--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask-FlatPages==0.6
 Flask-Script==2.0.5
 Frozen-Flask==0.12
 guess-language-spirit==0.5.2
+gunicorn==19.4.5
 itsdangerous==0.24
 Jinja2==2.8
 jsmin==2.2.0
